:art: update css

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,13 +1,9 @@
+.board {
+  min-width: 100px;
+}
+
 .board-row:after {
   clear: both;
   content: "";
   display: table;
-}
-
-.status {
-  margin-bottom: 10px;
-}
-
-.kbd-navigation .square:focus {
-  background: #ddd;
 }
